--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -118,29 +118,29 @@ span.navbar-text {
     margin-left: 14px;
 }
 .social-icon a {
-    width: 42px;
-    height: 42px;
-    background: rgba(217, 217, 217, 0.1);
-    display: inline-flex;
-    border-radius: 50%;
-    margin-right: 6px;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+  width: 42px;
+  height: 42px;
+  background: rgba(217, 217, 217, 0.1);
+  display: inline-flex;
+  border-radius: 50%;
+  margin-right: 6px;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
 .social-icon a::before {
-    content: "";
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    background-color: #ffffff;
-    border-radius: 50%;
-    transform: scale(0);
-	transition: 0.3s ease-in-out;
+  content: "";
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  background-color: #ffffff;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
 }
 .social-icon a:hover::before {
-    transform: scale(1);
+  transform: scale(1);
 }
 .social-icon a img {
 	width: 40%;
@@ -234,7 +234,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url('./assets/img/banner-bg.png');
+  /* background-image: url('./assets/img/banner-bg.png'); */
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -283,24 +285,510 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-left: 25px;
 }
 .banner img {
-  animation: updown 3s linear infinite;
+  max-width: 120%;
+  height: auto;
+  animation: updown 4s linear infinite;
 }
 @keyframes updown {
     0% {
-        transform: translateY(-20px);
+        transform: translateY(-50px);
     }
     50% {
-        transform: translateY(20px);
+        transform: translateY(0px);
     }
     100% {
-        transform: translateY(-20px);
+        transform: translateY(-50px);
     }
 }
 .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
 
-.App {
+/* Skills */
+.skill {
+  height: 400px;
+  position: relative;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
+  background-position: top center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.skill-bx {
+  background: #000000;
+  border-radius: 64px;
+  text-align: center;
+  margin-top: -60px;
+  height: 125%;
+  /* border: 1px solid blue; */
+}
+
+.skill-bx-testing{
+  background: #000000;
+  border-radius: 64px;
+  text-align: center;
+  margin-top: -60px;
+  height: 125%;
+  /* border: 1px solid blue; */
+}
+
+.skill h2 {
+  font-size: 45px;
+  font-weight: 700;
+  margin-top: 0px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* .skill p {
+  color: #B8B8B8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px 0 75px 0;
+} */
+
+.skill-slider {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+/* .skill-slider .item img {
+  width: 50%;
+  margin: 0 auto 15px auto;
+} */
+
+/* .background-image-left {
+  top: 28%;
+  position: absolute;
+  bottom: 0;
+  width: 40%;
+  z-index: -4;
+} */
+
+/* .skill .skill-bx .skill-slider .item-left{
+  height: 200px;
+} */
+
+.skill-slider {
+  height: 250px;
+}
+
+.skill-slider .item .gauge{
+  width: 160px;
+  height: 160px;
+  position: relative;
+  top: 80px;
+  left: 135px;
+}
+
+/* .skill .skill-bx .skill-slider .item-left .outer-left{
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  padding: 20px;
+  box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
+              -6px -6px -10px -1px rgba(255,255,255,0.7)
+}
+
+.skill .skill-bx .skill-slider .item-left .inner-left{
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  box-shadow: inset 4px 4px 6px -1px rgba(0,0,0,0.2)
+              inset -4px -4px 6px -1px rgba(255,255,255,0.7)
+              -0.5px -0.5px 0px rgba(255, 255, 255, 1)
+              0.5px 0.5px 0px rgba(0,0,0,0.15),
+              0px 12px 10px -10px rgba(255,255,255,0.7)
+} */
+
+.skill-bx .number h3{
+  font-weight: bold;
+  color: rgb(255, 249, 249);
+  position: absolute;
+  top: -35px;
+  left: 57px;
+}
+
+.skill-bx .item h5{
+  text-align: center;
+  margin-top: 10px;
+  /* position: absolute;
+  top: 160px;
+  left: 200px; */
+  /* margin: 200px 0px 0px 90px; */
+}
+
+.skill-bx-testing .number h3{
+  font-weight: bold;
+  color: rgb(255, 249, 249);
+  position: absolute;
+  top: -27px;
+  left: 57px;
+}
+
+.skill-bx-testing .item h5{
+  text-align: center;
+  margin-top: 10px;
+  /* position: absolute;
+  top: 160px;
+  left: 200px; */
+  /* margin: 200px 0px 0px 90px; */
+}
+
+.skill-slider .item .circle{
+  fill:none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  /* animation: anim 1s linear forwards; */
+}
+
+.skill-slider .item .circle-animation65{
+  animation: anim65 20s linear infinite;
+}
+
+.skill-slider .item .circle-animation80{
+  animation: anim80 20s linear infinite;
+}
+
+.skill-slider .item .circle-animation85{
+  animation: anim85 20s linear infinite;
+}
+
+.skill-slider .item .circle-animation90{
+  animation: anim90 20s linear infinite;
+}
+
+.skill-slider .item .circle-animation95{
+  animation: anim95 20s linear infinite;
+}
+
+.skill-slider .item svg{
+  position: absolute;
+  top: -20px;
+  left: 135px;
+}
+
+.skill-bx-testing .skill-slider .item svg{
+  position: absolute;
+  top: -12px;
+  left: 135px;
+}
+
+@keyframes anim65 {
+  0% {
+    stroke-dashoffset: 472;
+  }
+  25%{
+    stroke-dashoffset: 205;
+  }
+  75%{
+    stroke-dashoffset: 205;
+  }
+  100%{
+    stroke-dashoffset: 472;
+  }  
+}
+
+@keyframes anim80 {
+  0% {
+    stroke-dashoffset: 472;
+  }
+  25%{
+    stroke-dashoffset: 134;
+  }
+  75%{
+    stroke-dashoffset: 134;
+  }
+  100%{
+    stroke-dashoffset: 472;
+  }  
+}
+
+@keyframes anim85 {
+  0% {
+    stroke-dashoffset: 472;
+  }
+  25%{
+    stroke-dashoffset: 110;
+  }
+  75%{
+    stroke-dashoffset: 110;
+  }
+  100%{
+    stroke-dashoffset: 472;
+  }  
+}
+
+@keyframes anim90 {
+  0% {
+    stroke-dashoffset: 472;
+  }
+  25%{
+    stroke-dashoffset: 87;
+  }
+  75%{
+    stroke-dashoffset: 87;
+  }
+  100%{
+    stroke-dashoffset: 472;
+  }  
+}
+
+@keyframes anim95 {
+  0% {
+    stroke-dashoffset: 472;
+  }
+  25%{
+    stroke-dashoffset: 64;
+  }
+  75%{
+    stroke-dashoffset: 64;
+  }
+  100%{
+    stroke-dashoffset: 472;
+  }  
+}
+/************ Projects Css ************/
+.projects {
+  padding: 0px 0;
+  position: relative;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
+}
+.projects h2 {
+	font-size: 45px;
+	font-weight: 700;
+  text-align: center;
+}
+.projects p {
+  color: #B8B8B8;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  text-align: center;
+  width: 56%;
+}
+.projects .nav.nav-pills {
+  width: 72%;
+  margin: 0 auto;
+  border-radius: 50px;
+  background-color: rgb(255 255 255 / 10%);
+  overflow: hidden;
+}
+.projects .nav.nav-pills .nav-item {
+  width: 33.33333%;
+}
+.projects .nav.nav-pills .nav-link {
+  background-color: transparent;
+  border-radius: 0;
+  padding: 17px 0;
+  color: #fff;
+  width: 100%;
+  font-size: 17px;
+  letter-spacing: 0.8px;
+  font-weight: 500;
+  position: relative;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+  z-index: 0;
+}
+.projects .nav.nav-pills .nav-link::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 100%;
+    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+.projects .nav.nav-pills .nav-link.active::before {
+    width: 100% !important;
+}
+.projects .nav.nav-pills .nav-link.active {
+    border: 1px solid rgba(255, 255, 255, 1);
+}
+.nav-link#projects-tabs-tab-first {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 55px 0px 0px 55px;
+}
+.nav-link#projects-tabs-tab-second {
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.nav-link#projects-tabs-tab-third {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0 55px 55px 0;
+}
+.proj-imgbx {
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+.proj-imgbx::before {
+  content: "";
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+.proj-imgbx:hover::before {
+  height: 100%;
+}
+.proj-txtx {
+  position: absolute;
+  text-align: center;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease-in-out;
+  opacity: 0;
+  width: 100%;
+}
+.proj-imgbx:hover .proj-txtx {
+  top: 50%;
+  opacity: 1;
+}
+.proj-txtx h4 {
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+}
+.proj-txtx span {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  letter-spacing: 0.8px;
+}
+.background-image-right {
+  top: 20%;
+  position: absolute;
+  bottom: 0;
+  width: 35%;
+  right: 0;
+  z-index: -4;
+}
+
+/************ Contact Css ************/
+.contact {
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
+  padding: 60px 0 60px 0;
+}
+.contact img {
+  width: 92%;
+}
+.contact h2 {
+	font-size: 45px;
+	font-weight: 700;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.contact form input {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  color: #fff;
+  margin: 2px 0 8px 0;
+  padding: 18px 26px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  transition: 0.3s ease-in-out;
+}
+.contact form textarea{
+  width: 102.5%;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  color: #fff;
+  margin: 2px 0px 0px -6px;
+  padding: 18px 26px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  transition: 0.3s ease-in-out;
+}
+.contact form input:focus, .contact form textarea:focus {
+  background: rgba(255, 255, 255, 1);
+  color: #121212;
+}
+.contact form input::placeholder, .contact form textarea::placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+}
+.contact form input:focus::placeholder, .contact form textarea:focus::placeholder {
+  color: #121212;
+  opacity: 0.8;
+}
+.contact form button {
+  font-weight: 700;
+  color: #000;
+  background-color: #fff;
+  padding: 14px 48px;
+  font-size: 18px;
+  margin-top: 3px;
+  border-radius: 20px;
+  position: absolute;
+  right: -5px;
+  transition: 0.3s ease-in-out;
+}
+.contact form button span {
+  z-index: 1;
+  position: relative;
+}
+.contact form button:hover {
+  color: #fff;
+}
+.contact form button::before {
+  content: "";
+  background: #121212;
+  border-radius: 20px;
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: 0.3s ease-in-out;
+}
+.contact form button:hover::before {
+  width: 100%;
+}
+
+/************ Footer Css ************/
+.footer {
+  padding: 2px 0px 0px 0px;
+  background: #121212;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+ /* .footer img {
+  width: 26%;
+}  */
+.footer p {
+  font-weight: 400;
+  font-size: 14px;
+  color: #B8B8B8;
+  letter-spacing: 0.5px;
+  margin-top: 20px;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -337,4 +825,4 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   to {
     transform: rotate(360deg);
   }
-}
+} */
