--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -555,7 +555,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 /************ Projects Css ************/
 .projects {
-  padding: 0px 0;
+  padding: 0px 0px 40px 0px;
   position: relative;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
