--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -92,11 +92,11 @@ p.danger {
     font-weight: 700;
     color: #fff;
     border: 1px solid #fff;
-    padding: 10px 18px;
+    padding: 1.5vh 2vh;
     font-size: 18px;
     /* margin-left: 18px; */
     position: relative;
-    left: 18px;
+    left: 5vw;
     background-color: transparent;
     transition: 0.3s ease-in-out;
   }
@@ -116,12 +116,13 @@ p.danger {
     top: 0;
     z-index: 9999;
     transition:  0.32s ease-in-out;
+
   }
   nav.navbar.scrolled {
     padding: 0px 0;
     background-color: #121212;
   }
-  nav.navbar.active {
+  nav.navbar.navbar-toggler:focus {
     padding: 0px 0;
     background-color: #121212;
   }
@@ -296,7 +297,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     background-repeat: no-repeat;
   }
   .banner h1 {
-    font-size: 32px;
+    font-size: 4.5vh;
     font-weight: 700;
     letter-spacing: 0.8px;
     line-height: 1;
@@ -585,7 +586,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     font-weight: bold;
     color: rgb(255, 249, 249);
     position: absolute;
-    /* top: 0vh; */
+    top: 0.5vh;
     left: 3vh;
   }
   
@@ -593,7 +594,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     font-weight: bold;
     color: rgb(255, 249, 249);
     position: absolute;
-    /* top: 0vh; */
+    top: 0.5vh;
     left: 3vh;
   }
 
@@ -642,7 +643,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   }
 
   .skill h2 {
-    font-size: calc(24px + 1vw);
+    font-size: calc(20px + 1vw);
     font-weight: 700;
     /* margin-top: 0px; */
     padding-top: 3vh;
@@ -1041,7 +1042,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   align-items: flex-start;
   justify-content: flex-start; 
   width: 100%;
-  padding: 3vh 15vw 3vh 2vw;
+  padding: 3vh 10vh 3vh 2vw;
   position: relative; 
 }
 
@@ -1050,17 +1051,31 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .experience .accordion-wrap .accordion .teaser .time {
-  margin-top: 5px;
-  width: 200px;
+  margin-top: 2.5vh;
+  width: 25vh;
 }
 
-.experience .accordion-wrap .accordion .teaser .title {
-  cursor: pointer;
+@media   (min-width: 0px) and (max-width: 480px) {
+  .experience .accordion-wrap .accordion .teaser .title {
+    cursor: pointer;
+  }
+  
+  .experience .accordion-wrap .accordion .teaser .title .theme {
+    opacity: 0.4;
+    cursor: pointer;
+  }
 }
 
-.experience .accordion-wrap .accordion .teaser .title .theme {
-  opacity: 0.4;
-  cursor: pointer;
+@media   (min-width: 481px) and (max-width: 1920px) {
+  .experience .accordion-wrap .accordion .teaser .title {
+    cursor: pointer;
+    padding-left: 1vh;
+  }
+  
+  .experience .accordion-wrap .accordion .teaser .title .theme {
+    opacity: 0.4;
+    cursor: pointer;
+  }
 }
 
 @media (max-width: 990px) {
@@ -1229,25 +1244,25 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     width: 100% !important;
 }
 .projects .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+    border: 0.25vh solid rgba(255, 255, 255, 1);
 }
 .nav-link#projects-tabs-tab-first {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 0.25vh solid rgba(255, 255, 255, 0.5);
   border-radius: 5vh 0px 0px 5vh;
 }
 .nav-link#projects-tabs-tab-second {
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 0.25vh solid rgba(255, 255, 255, 0.5);
+  border-bottom: 0.25vh solid rgba(255, 255, 255, 0.5);
 }
 .nav-link#projects-tabs-tab-third {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 0.25vh solid rgba(255, 255, 255, 0.5);
   border-radius: 0 5vh 5vh 0;
 }
 .proj-imgbx {
   position: relative;
-  border-radius: 30px;
+  border-radius: 8vh;
   overflow: hidden;
-  margin-bottom: 24px;
+  margin-bottom: 3vh;
 }
 .proj-imgbx::before {
   content: "";
@@ -1276,7 +1291,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   opacity: 1;
 }
 .proj-txtx h4 {
-  font-size: 30px;
+  font-size: calc(18px + 1vh);
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
@@ -1284,7 +1299,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .proj-txtx span {
   font-style: italic;
   font-weight: 400;
-  font-size: 15px;
+  font-size: calc(8px + 1vh);
   letter-spacing: 0.8px;
 }
 .background-image-right {
@@ -1297,10 +1312,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Contact Css ************/
-.contact {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
-  padding: 8vh 0px 8vh 0px;
+@media   (min-width: 0px) and (max-width: 480px) {
+  .contact {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
+    padding: 8vh 0px 12vh 0px;
+  }
+}
+@media   (min-width: 481px) and (max-width: 1920px) {
+  .contact {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(105,9,121,1) 40%, rgba(75,202,214,1) 100%);
+    padding: 8vh 0px 8vh 0px;
+  }
 }
 .contact img {
   width: 92%;
@@ -1387,7 +1411,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 2px 0px 0px 0px;
+  padding: 1vh 0px 0px 0px;
   background: #121212;
   background-position: center center;
   background-size: cover;
