--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -552,10 +552,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
 }
 
-/* .skill-slider .item img {
-  width: 50%;
+.skill-slider .item img {
+  /* width: 50%; */
+  height: 25vh;
+  width: 25vh;
   margin: 0 auto 15px auto;
-} */
+}
 
 /* .background-image-left {
   top: 28%;
@@ -627,11 +629,20 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     left: 13vh;
   }
   
+  
   .skill-bx-testing .skill-slider .item svg{
     position: absolute;
     top: 2vh;
     left: 13vh;
   }
+
+  /* .skill-bx .skill-slider .item img {
+    width: 50%;
+  }
+
+  .skill-bx-testing .skill-slider .item img {
+    width: 50%;
+  } */
 
   .skill-slider .item .circle{
     fill:none;
@@ -710,6 +721,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     top: 0vh;
     left: 75vh;
   }
+
+  
 
   .skill-slider .item .circle{
     fill:none;
