--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -1277,6 +1277,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   overflow: hidden;
   margin-bottom: 3vh;
 }
+
 .proj-imgbx::before {
   content: "";
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
@@ -1308,12 +1309,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
+  color: white;
 }
 .proj-txtx span {
   font-style: italic;
   font-weight: 400;
   font-size: calc(8px + 1vh);
   letter-spacing: 0.8px;
+  color: white;
 }
 .background-image-right {
   top: 20%;
