--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -122,11 +122,18 @@ p.danger {
     padding: 0px 0;
     background-color: #121212;
   }
-  nav.navbar.navbar-toggler:focus {
+  /* nav.navbar.navbar-toggler:focus {
+    padding: 0px 0;
+    background-color: #121212;
+  } */
+  nav.navbar.expanded {
     padding: 0px 0;
     background-color: #121212;
   }
 }
+
+
+
 
 @media (min-width: 481px) and (max-width: 1920px) {
   .navbar-text button {
@@ -157,6 +164,10 @@ p.danger {
     transition:  0.32s ease-in-out;
   }
   nav.navbar.scrolled {
+    padding: 0px 0;
+    background-color: #121212;
+  }
+  nav.navbar.expanded {
     padding: 0px 0;
     background-color: #121212;
   }
@@ -201,7 +212,7 @@ span.navbar-text {
   transform: scale(1);
 }
 .social-icon a img {
-	width: 40%;
+	width: 55%;
 	z-index: 1;
 	transition: 0.3s ease-in-out;
 }
@@ -210,8 +221,8 @@ span.navbar-text {
 }
 
 .navbar .brand_logo {
-  width:6vh;
-  height:6vh;
+  /* width:4vh; */
+  height:8vh;
 }
 
 .navbar-text button span {
@@ -1016,8 +1027,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .experience h5 {
-	/* font-family: 'Centra', sans-serif !important; */
-	font-size: calc(6px + 1vh);
+	font-family: 'Centra', sans-serif !important;
+	font-size: calc(8px + 1vh);
   font-weight: 800;
 }
 
